fix issue with arrow art element breaking on small vertical devices - height set

--- a/frontend/src/components/dashboard/FreeOnboarding.module.scss
+++ b/frontend/src/components/dashboard/FreeOnboarding.module.scss
@@ -62,6 +62,7 @@
 .copy-mask-arrow-element {
   position: relative;
   width: 100px;
+  height: 100px;
   margin: 0 auto;
 
   img {
